// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  position: absolute;
  z-index: 1000;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 4rem;
  background: rgba(0,0,0,0.65);
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c2 {
  position: relative;
  min-height: 15rem;
  max-height: 100%;
  padding: 5rem 3rem;
  background: #ffffff;
  color: #101113;
  overflow-y: auto;
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c2.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c2.scroll-content .header {
  margin-bottom: 2rem;
}

.c2 .content {
  padding: 2rem;
}

.c2.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c2.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c2 .content.loading {
  display: none;
}

.c2.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="c1"
  >
    <main
      className="container-root c2"
      style={undefined}
    >
      
      <div
        className="content"
      >
        <div />
      </div>
      
    </main>
  </aside>
</span>
`;

exports[`When using snapshots with loader Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c4 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto;
  border-width: 3px;
  border-style: solid;
  border-color: #707377;
  border-radius: 50%;
  border-left-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
  -webkit-animation: iVXCSc 650ms infinite linear;
  animation: iVXCSc 650ms infinite linear;
}

.c3 {
  text-align: center;
}

.c3.centered {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  color: #707377;
  margin-top: 1.5rem;
}

.c1 {
  position: absolute;
  z-index: 1000;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 4rem;
  background: rgba(0,0,0,0.65);
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c2 {
  position: relative;
  min-height: 15rem;
  max-height: 100%;
  padding: 5rem 3rem;
  background: #ffffff;
  color: #101113;
  overflow-y: auto;
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c2.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c2.scroll-content .header {
  margin-bottom: 2rem;
}

.c2 .content {
  padding: 2rem;
}

.c2.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c2.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c2 .content.loading {
  display: none;
}

.c2.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="c1"
  >
    <main
      className="container-root c2"
      style={undefined}
    >
      <div
        className="content loading"
      >
        <div />
      </div>
      <div
        className="centered c3"
      >
        <div>
          <div
            className="c4"
          />
          <div
            className="c5"
          >
            loading
          </div>
        </div>
      </div>
    </main>
  </aside>
</span>
`;

exports[`When using snapshots with title, header and footer Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c3 {
  margin: -3rem 0 5rem;
}

.c3.in-header {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0 0 0 2rem;
  line-height: 5rem;
}

.c1 {
  position: absolute;
  z-index: 1000;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 4rem;
  background: rgba(0,0,0,0.65);
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c2 {
  position: relative;
  min-height: 15rem;
  max-height: 100%;
  padding: 5rem 3rem;
  background: #ffffff;
  color: #101113;
  overflow-y: auto;
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c2.scroll-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: none;
}

.c2.scroll-content .header {
  margin-bottom: 2rem;
}

.c2 .content {
  padding: 2rem;
}

.c2.scroll-content .content {
  overflow-y: auto;
  margin: 0;
  border-color: #dbdcdd;
  border-style: solid;
  border-width: 1px 0 1px 0;
}

.c2.scroll-content .content::after {
  content: '';
  margin-top: 2rem;
  display: block;
}

.c2 .content.loading {
  display: none;
}

.c2.scroll-content .footer {
  margin-top: 2rem;
}

<span
  className="c0"
>
  <aside
    className="c1"
  >
    <main
      className="container-root c2"
      style={undefined}
    >
      <header
        className="header"
      >
        <h2
          className="sidebar-title in-header c3"
        >
          title
        </h2>
        <div />
      </header>
      <div
        className="content"
      >
        <div />
      </div>
      <div />
    </main>
  </aside>
</span>
`;
